# tdb

./: .gitignore  .tdb.duckdb  .tdb_profile.json  README.md  pyproject.toml
.github/workflows/: ci.yml
data/raw/: customer.csv  deliveries.csv  employees.csv  orders.csv  product.csv  warehouses.csv
gui/: project.yml
gui/TDBGUI.xcodeproj/: project.pbxproj
gui/TDBGUI.xcodeproj/project.xcworkspace/xcuserdata/vladgurov.xcuserdatad/: UserInterfaceState.xcuserstate
gui/TDBGUI.xcodeproj/xcuserdata/vladgurov.xcuserdatad/xcschemes/: xcschememanagement.plist
gui/TDBGUI/Sources/: Chrome.swift  ContentView.swift  DataGrid.swift  DesignSystem.swift  Effects.swift  Sidebar.swift  TDBGUIApp.swift  TdbRunner.swift
scripts/: demo.sh
src/tdb/: cli.py
src/tdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
