[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdb"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.0.0",
  "typer>=0.12",
  "rich>=13.0",
  "pandas>=2.0",
  "pyarrow>=14.0",
]

[project.scripts]
tdb = "tdb.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
